fixed spacing of contact-buttons

--- a/portfolio-websites/personal/styles/styles.css
+++ b/portfolio-websites/personal/styles/styles.css
@@ -17,9 +17,14 @@ body {
 }
 
 .contact-buttons {
-   display: grid;
+   /*display: grid;
    grid-template-columns: repeat(12, minmax(50px,1fr));
-   grid-gap: 1em;
+	grid-gap: 1em;*/
+	
+	display: flex;
+   justify-content: space-around;
+   max-width: 48rem;
+   margin: 1.6rem auto;
 }
 
 .hero {
